syntax = "proto3";

package labs.v1;

option go_package = "github.com/makeopensource/leviathan/generated/labs/v1";

import "types/v1/types.proto";

service LabService {
  rpc NewLab(LabRequest) returns (NewLabResponse) {}
  rpc EditLab(LabRequest) returns (EditLabResponse) {}
  rpc DeleteLab(DeleteLabRequest) returns (DeleteLabResponse) {}
}

message LabRequest {
  string LabName = 1;
  types.v1.FileUpload makeFile = 2;
  types.v1.FileUpload graderFile = 3;
}

message NewLabResponse {}

message EditLabResponse {}

message DeleteLabRequest {
  string LabName = 1;
}

message DeleteLabResponse {}
