syntax = "proto3";

package types.v1;

option go_package = "github.com/makeopensource/leviathan/generated/types/v1";

message FileUpload {
  string filename = 1;
  bytes content = 2;
}

message MachineLimits {
  int32 CPUCores = 1;
  int32 memoryInMb = 2;
  int32 PidLimit = 3;
}